--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "ex1",
+  "name": "with-tailwindcss",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "next": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-number-format": "^4.6.4",
+    "react-to-print": "^2.12.6"
   },
   "devDependencies": {
-    "@types/react": "17.0.13",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "@types/react": "^17.0.13",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^2.2.4"
   }
 }
