--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
@@ -21,6 +22,8 @@
   "devDependencies": {
     "@types/react": "^17.0.13",
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
     "postcss": "^8.3.5",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.4",
