--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.6.4",
-    "react-to-print": "^2.12.6"
+    "react-to-print": "^2.12.6",
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.13",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.5",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.4",
