--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "base64-arraybuffer": "^0.2.0",
+    "cloudinary": "^1.26.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
