--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "with-tailwindcss",
+  "name": "gml-personal-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.3.0",
-    "@heroicons/react": "^1.0.1",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "base64-arraybuffer": "^0.2.0",
-    "cloudinary": "^1.26.2",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-number-format": "^4.6.4",
-    "react-to-print": "^2.12.6",
-    "sass": "^1.35.2"
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@next/bundle-analyzer": "^12.1.6",
+    "next": "^12.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.7"
   },
   "devDependencies": {
-    "@types/react": "^17.0.13",
-    "autoprefixer": "^10.2.6",
-    "eslint": "^7.30.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "postcss": "^8.3.5",
-    "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^2.2.4",
-    "typescript": "^4.3.5"
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
+    "eslint-config-next": "^12.1.6",
+    "postcss": "^8.4.14",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.1.3",
+    "typescript": "^4.7.4",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
