--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
+    "classnames": "^2.3.1",
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
