--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-to-print": "^2.14.7"
   },
   "devDependencies": {
+    "prettier": "^2.7.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "^18.0.0",
