--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "tailwindcss": "^3.1.3",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
+  },
+  "engineStrict": true,
+  "engines": {
+    "node": "^18.16.0"
   }
 }
