--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
-    "classnames": "^2.3.1",
+    "cn": "npm:classnames@^2.3.2",
+    "dayjs": "^1.11.9",
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-to-print": "^2.14.7"
+    "react-to-print": "^2.14.7",
+    "tailwind-variants": "^0.1.13"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "^18.0.0",
@@ -29,6 +30,7 @@
     "eslint": "^8.17.0",
     "eslint-config-next": "^12.1.6",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.1.3",
     "typescript": "^4.7.4",
