--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
-    "cn": "npm:classnames@^2.3.2",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "next": "^12.1.6",
     "react": "^18.2.0",
