--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
+    "lucide-react": "^0.263.1",
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.14.7",
-    "tailwind-variants": "^0.1.13"
+    "tailwind-merge": "^1.14.0",
+    "tailwind-variants": "^0.1.13",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
