--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -24,19 +20,13 @@
       }
     ],
     "paths": {
-      "@components/*": [
-        "components/*"
-      ]
+      "@components": ["components/index.ts"],
+      "@components/operations": ["components/operations/index.ts"],
+      "@utils/*": ["utils/*"],
+      "@lib/*": ["lib/*"]
     },
     "incremental": true
   },
-  "include": [
-    "next-env.d.ts",
-    "styles.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "styles.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
