--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,18 +13,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "plugins": [
       {
         "name": "typescript-plugin-css-modules"
       }
     ],
-    "paths": {
-      "@components": ["components/index.ts"],
-      "@components/operations": ["components/operations/index.ts"],
-      "@utils/*": ["utils/*"],
-      "@lib/*": ["lib/*"]
-    },
     "incremental": true
   },
   "include": ["next-env.d.ts", "styles.d.ts", "**/*.ts", "**/*.tsx"],
