--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
@@ -50,6 +51,7 @@
     "eslint": "^8.17.0",
     "eslint-config-next": "^13.4.12",
     "eslint-plugin-storybook": "^0.6.13",
+    "husky": "^8.0.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
