--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
+    "immer": "^10.0.2",
     "lucide-react": "^0.263.1",
     "next": "^13.4.12",
     "react": "^18.2.0",
@@ -32,7 +33,8 @@
     "react-to-print": "^2.14.7",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.2.1",
