--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-to-print": "^2.14.7",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
