--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port=3050",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
-    "start": "next start",
+    "start": "next start --port=3051",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -38,15 +36,6 @@
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.2.1",
-    "@storybook/addon-interactions": "^7.2.1",
-    "@storybook/addon-links": "^7.2.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling": "^1.3.5",
-    "@storybook/blocks": "^7.2.1",
-    "@storybook/nextjs": "^7.2.1",
-    "@storybook/react": "^7.2.1",
-    "@storybook/testing-library": "^0.2.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "^18.0.0",
@@ -59,7 +48,6 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "storybook": "^7.2.1",
     "tailwindcss": "^3.1.3",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
@@ -67,10 +55,5 @@
   "engineStrict": true,
   "engines": {
     "node": "^18.16.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
