--- a/package.json
+++ b/package.json
@@ -11,29 +11,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.9",
-    "immer": "^10.0.2",
-    "lucide-react": "^0.263.1",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
     "react-to-print": "^2.14.7",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
-    "tailwindcss-animate": "^1.0.6",
-    "use-immer": "^0.9.0"
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
