--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.1.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.14.7",
@@ -36,7 +38,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
