--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@next/bundle-analyzer": "^12.1.6",
+    "@next/mdx": "^14.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "next": "^14.1.0",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
