--- a/package.json
+++ b/package.json
@@ -5,48 +5,55 @@
   "scripts": {
     "dev": "next dev --port=3050",
     "build": "next build",
-    "analyze": "ANALYZE=true next build",
     "start": "next start --port=3051",
     "lint": "next lint",
     "prepare": "husky install"
+  },
+  "eslintConfig": {
+    "extends": "next/core-web-vitals"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/bundle-analyzer": "^12.1.6",
     "@next/mdx": "^14.1.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "classnames": "^2.3.2",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
-    "dayjs": "^1.11.10",
+    "gray-matter": "^4.0.3",
     "next": "^14.1.0",
-    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.14.7",
+    "rehype-pretty-code": "^0.12.6",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "shikiji": "^0.10.2",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "velite": "0.1.0-beta.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/mdx": "^2.0.11",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.17.0",
     "eslint-config-next": "^14.1.0",
-    "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
-  }
+  },
+  "sideEffects": false
 }
