--- a/package.json
+++ b/package.json
@@ -10,7 +10,24 @@
     "prepare": "husky install"
   },
   "eslintConfig": {
-    "extends": "next/core-web-vitals"
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": "next/core-web-vitals",
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "plugins": [
+      "@typescript-eslint",
+      "unused-imports"
+    ],
+    "rules": {
+      "unused-imports/no-unused-imports": "error"
+    }
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -27,32 +44,42 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.14.7",
-    "rehype-pretty-code": "^0.12.6",
-    "rehype-slug": "^6.0.0",
+    "rehype-pretty-code": "^0.13.0",
     "rehype-stringify": "^10.0.0",
-    "shikiji": "^0.10.2",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "shiki": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
     "tailwindcss-animate": "^1.0.6",
+    "unified": "^11.0.4",
+    "unist-util-visit": "^5.0.0",
     "velite": "0.1.0-beta.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/mdx": "^2.0.11",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.17.0",
     "eslint-config-next": "^14.1.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.1.11",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "shikiji": "^0.10.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^4.7.4",
+    "typescript": "^5.3.3",
     "typescript-plugin-css-modules": "^3.4.0"
   },
   "sideEffects": false
